<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.waitara_mumbi.notekeeper.NoteActivity">
    <item
        android:id="@+id/action_send_mail"
        android:orderInCategory="100"
        android:title="send as email"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_take_photo"
        android:orderInCategory="200"
        android:title="take photos"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_cancel"
        android:icon="@android:drawable/ic_menu_revert"
        android:title="cancel"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_next"

        android:icon="@android:drawable/ic_media_next"
        android:title="next"
        android:visible="false"
        app:showAsAction="ifRoom|withText" />
</menu>
